# atha.yoga

backend/: .env.example  Pipfile  pyproject.toml
backend/atha_yoga/: manage.py
backend/atha_yoga/atha_yoga/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py
backend/core/templates/admin/: login.html
backend/lessons/app/handlers/: lesson_handlers.py
backend/server/: settings.py
